# Android

NativeCamera/app/: CMakeLists.txt  build.gradle
NativeCamera/app/src/androidTest/java/com/lion/nativecamera/: ExampleInstrumentedTest.java
NativeCamera/app/src/main/: AndroidManifest.xml
NativeCamera/app/src/main/cpp/: native-lib.cpp
NativeCamera/app/src/main/cpp/base/: config.h  mylog.h
NativeCamera/app/src/main/java/com/lion/nativecamera/: MainActivity.java
NativeCamera/app/src/main/res/layout/: activity_main.xml
NativeCamera/app/src/test/java/com/lion/nativecamera/: ExampleUnitTest.java
NativeCamera/gradle/wrapper/: gradle-wrapper.properties
